# echo

./: .gitignore  Dockerfile  LICENSE  README.md  notebook.ipynb  pyproject.toml  sentinel_classifier.ipynb  test_api.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  railway.toml
backend/src/: api.py  predict.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx
model/: echo_audio_clf.onnx
src/: api.py  download_data.py  predict.py  train.py
training/: download_data.py  train.py
