[project]
name = "echo"
version = "0.1.0"
description = "UrbanSound8K Audio Classifier"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "mangum",
    "python-multipart",
    "onnxruntime",
    "librosa",
    "soundfile",
    "numpy",
]

[project.optional-dependencies]
training = [
    "torch",
    "torchaudio",
    "torchvision",
    "pandas",
    "tqdm",
    "scikit-learn",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
